Update 4.1 kernel defconfig
This path change kernel 4.1 defconfig file name to shield_defconfig and update kernel repo.

Signed-off-by: Lee, Jude <Jude.Lee@atmel.com>

--- a/README
+++ b/README
@@ -3,6 +3,7 @@ To build and use the buildroot stuff, do the following:
 1) select the defconfig of kernel version
  - sama5d4_wilc3000_k3.10_shield_defconfig
  - sama5d4_wilc3000_k3.18_shield_defconfig
+ - sama5d4_wilc3000_k4.1_shield_defconfig
 2) apply the defconfig 'make sama5d4_wilc3000_k3.10_shield_defconfig'
 3) run 'make menuconfig'
 4) select the packages you wish to compile
